--- a/comp205-week5lab-task1.html
+++ b/comp205-week5lab-task1.html
@@ -3,13 +3,19 @@
 <body>
 <h1>Task 1</h1>
 
-<form>
-<input type=text "name">
-<input type=submit "submit">
-<input type="checkbox" name="sex" value="unknown">unknown
-<input type=submit "submit">
-<input type="button" onclick="alert('please Submit Me')" value="Click Here">
-<input type=submit "submit">
+<form action= "">
+Name:<br>
+<input type=text "name"><br>
+<br><input type=submit "submit"><br>
+
+sex:<br>
+<input type="checkbox" name="sex" value="unknown">unknown<br>
+<br><input type=submit "submit"><br>
+
+button:<br>
+<input type="button" onclick="alert('please Submit Me')" value="Click Here"><br>
+<br><input type=submit "submit">
+<br><br>
 </form>
 </body>
 </HTML>
