--- a/comp205-week9lab-task1.html
+++ b/comp205-week9lab-task1.html
@@ -2,13 +2,19 @@
 <html>
 
 <head>
+ <link rel="stylesheet" type="text/css" href="lab9.css">   
 <title> LAB WEEK 9 Jennifer Pedersen</title>
+<style>
+div header.nested {
+background-color: red;   
+}
+</style>
 </head>
 
 <body>
     
 <div>
-<header>
+<header class= "nested">
 <p>first div</p>
 </header>
 <table>
@@ -25,13 +31,13 @@
 
 <div>
 <header>
-<p>second div</p>    
+<p class= "large-text">second div</p>    
 </header>      
 </div>
 
 <div>
 <header>
-<p>third div</p>
+<p class= "large-text">third div</p>
 </header>       
 </div>
 
