--- a/index_week11.html
+++ b/index_week11.html
@@ -6,19 +6,23 @@
         <link href="styles_week11.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+
+
+<div class="full">
         <div class="menu">
             <h1>Brayden's Week 8 Lab</h1>
         </div>
         <div class="intro">
             <p>Welcome to my lab on box model!</p>
         </div>
-        <!-- Uncomment this part for Task 2 -->
-        <!--
-        <div class="full-box" style="overflow: auto;">
-            <div class="middle-box" style="overflow: auto;">
-                <p>Christmas is Coming!</p>
-            </div>
-        </div>
-        -->
+        
+<div class="full-box" style="overflow: auto;">
+
+<div class="middle-box" style="overflow: auto;">
+<p>Christmas is Coming!</p>
+
+</div>
+</div>
+</div>
     
 </body></html>
